--- a/css/main.css
+++ b/css/main.css
@@ -1375,3 +1375,175 @@ header .icon span {
 }
 
 /* End Blog */
+
+/* Start Contact */
+
+.contact {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #181818;
+    padding-right: 25px;
+    padding-left: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 991px) {
+    .contact {
+        flex-direction: column;
+    }
+}
+
+.contact .main {
+    flex-basis: 30%;
+}
+
+@media (max-width: 991px) {
+    .contact .main {
+        flex-basis: 100%;
+    }
+}
+
+.contact .main h1 {
+    color: var(--main-colorone, #ed6436);
+    font-size: 40px;
+    word-spacing: -8px;
+}
+
+.contact .main p {
+    color: white;
+    line-height: 1.5;
+}
+
+.contact .main h1 span {
+    color: white;
+}
+
+.contact .lists {
+    flex-basis: 69%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+@media (max-width: 991px) {
+    .contact .lists {
+        flex-basis: calc((100% / 3) - 20px);
+    }
+}
+
+@media (max-width: 768px) {
+    .contact .lists {
+        flex-direction: column;
+    }
+}
+
+.contact .lists .list {
+    padding: 10px 10px;
+    flex-basis: 35%;
+}
+
+.contact .lists .list h5 {
+    color: var(--main-colorone, #ed6436);
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+
+.contact .lists ul {
+    list-style: none;
+}
+
+.contact .lists .list ul li {
+    margin-bottom: 20px;
+}
+
+
+.contact .lists .list ul li i {
+    margin-right: 5px;
+}
+
+.contact .lists .list ul li,
+.contact .lists .list ul li a {
+    color: white;
+    text-decoration: none;
+    line-height: 1.5;
+}
+
+.contact .lists .list ul li a:hover {
+    text-decoration: underline;
+}
+
+.contact .lists .socials i {
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    margin-right: 5px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    cursor: pointer;
+    transition: var(--trans-dur, 0.3s);
+    -webkit-transition: var(--trans-dur, 0.3s);
+    -moz-transition: var(--trans-dur, 0.3s);
+    -ms-transition: var(--trans-dur, 0.3s);
+    -o-transition: var(--trans-dur, 0.3s);
+}
+
+.contact .lists .socials i:hover {
+    color: #181818;
+    background-color: white;
+}
+
+.contact .lists .list.pop li {
+    margin-bottom: 10px;
+}
+
+.contact .lists .list.pop li a {
+    text-transform: capitalize;
+    margin-left: 15px;
+    display: block;
+    position: relative;
+}
+
+.contact .lists .list.pop li a::before {
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    left: -15px;
+}
+
+.contact .lists .list.form input {
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border: none;
+}
+
+.contact .lists .list.form input:not(input[type="submit"]) {
+    outline: none;
+}
+
+.contact .lists .list.form input[type="submit"] {
+    background-color: var(--main-colorone, #ed6436);
+    color: white;
+    cursor: pointer;
+    transition: var(--trans-dur, 0.3s);
+    -webkit-transition: var(--trans-dur, 0.3s);
+    -moz-transition: var(--trans-dur, 0.3s);
+    -ms-transition: var(--trans-dur, 0.3s);
+    -o-transition: var(--trans-dur, 0.3s);
+}
+
+.contact .lists .list.form input[type="submit"]:hover {
+    background-color: #e84a15;
+}
+
+/* End Contact */
