--- a/css/main.css
+++ b/css/main.css
@@ -1194,13 +1194,15 @@ header .icon span {
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
+    display: flex;
+    justify-content: center;
 }
 
 .team .container .team-content .card:hover .socials {
     bottom: 5px;
 }
 
-.team .container .team-content .card .socials i {
+.team .container .team-content .card .socials .icon {
     color: var(--main-colorone, #ed6436);
     margin-right: 5px;
     border: 1px solid var(--main-colorone, #ed6436);
@@ -1209,16 +1211,20 @@ header .icon span {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
-    padding: 7px 10px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: var(--trans-dur, 0.3s);
     -webkit-transition: var(--trans-dur, 0.3s);
     -moz-transition: var(--trans-dur, 0.3s);
     -ms-transition: var(--trans-dur, 0.3s);
     -o-transition: var(--trans-dur, 0.3s);
-    cursor: pointer;
 }
 
-.team .container .team-content .card .socials i:hover {
+.team .container .team-content .card .socials .icon:hover {
     background-color: var(--main-colorone, #ed6436);
     color: white;
 }
@@ -1475,11 +1481,15 @@ header .icon span {
     text-decoration: underline;
 }
 
-.contact .lists .socials i {
+.contact .lists .socials {
+    display: flex;
+}
+
+
+.contact .lists .socials .icon {
     color: white;
     border: 1px solid white;
-    padding: 10px;
-    margin-right: 5px;
+    margin-right: 10px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -1491,9 +1501,14 @@ header .icon span {
     -moz-transition: var(--trans-dur, 0.3s);
     -ms-transition: var(--trans-dur, 0.3s);
     -o-transition: var(--trans-dur, 0.3s);
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.contact .lists .socials i:hover {
+.contact .lists .socials .icon:hover {
     color: var(--trans-color, #181818);
     background-color: white;
 }
